--- a/src/components/CardsDisplay/_index.scss
+++ b/src/components/CardsDisplay/_index.scss
@@ -1,9 +1,4 @@
-
-
-
-
 .cardWrapper {
-
     width: 340px;
     height: 340px;
     border-radius: 10px;
@@ -26,11 +21,10 @@ h2 {
     height: 52px;
     top: 268px;
     left: 20px;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 18px;
     line-height: 25.67px;
-    color: red;
+    color: white;
     position: absolute;
 
 }
@@ -39,9 +33,13 @@ h2 {
     object-fit: cover;
     position: absolute;
     transition: all 0.3s ease-in-out;
+    background-image: 
+    linear-gradient(red, black);
+   
    
     }
 }
 .cardWrapper:hover .cardImage--unique {
     transform: scale(1.1);
+    
   }
