--- a/src/components/Banner/_index.scss
+++ b/src/components/Banner/_index.scss
@@ -1,8 +1,8 @@
 .banner { 
 
-width: 100%;
+width: 90%;
 height: 223px;
-margin: 0 auto;
+margin: 20px auto;
 border-radius: 1rem;
 overflow: hidden;
 display: flex;
@@ -11,18 +11,19 @@ justify-content: center;
 position: relative;
 
 
+
 }
 .bannerImage {
 filter: brightness(0.5);
 width: 100%;
 height: 100%;
+object-fit: cover;
 }
 h1 {
+width: 100%;
+text-align: center;
 position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-color: white;
-font-size: 2rem;
+color: #FFFFFF;
+font-size: 48px;
 font-weight: 500;
 }
