--- a/src/components/CardsDisplay/_index.scss
+++ b/src/components/CardsDisplay/_index.scss
@@ -10,13 +10,35 @@
     transition: all 0.3s ease-in-out;
     align-items: center;
     justify-content: center;
-    @media (max-width: 768px) {
-        width: 90%
-        }
+  
 
-& 
-h2 { 
+  }
+  
+  .cardWrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    z-index: 1;
+    
+  }
 
+  .cardImage {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    object-fit: cover;
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .cardWrapper:hover .cardImage {
+    transform: scale(1.1);
+  }
+  .cardWrapper h2 { 
     width: 300px;    
     height: 52px;
     top: 268px;
@@ -24,22 +46,14 @@ h2 {
     font-weight: 500;
     font-size: 18px;
     line-height: 25.67px;
-    color: white;
+    color: #FFFFFF;
     position: absolute;
-
-}
- .cardImage {
-    margin: 0;
-    object-fit: cover;
-    position: absolute;
-    transition: all 0.3s ease-in-out;
-    background-image: 
-    linear-gradient(red, black);
-   
-   
-    }
-}
-.cardWrapper:hover .cardImage--unique {
-    transform: scale(1.1);
-    
+    z-index: 2;
   }
+  
+  @media (max-width: 768px) {
+    .cardWrapper {
+      width: 90%;
+    }
+  }
+  
