--- a/src/components/CardsDisplay/_index.scss
+++ b/src/components/CardsDisplay/_index.scss
@@ -1,10 +1,10 @@
 .cardWrapper {
-    width: 340px;
+    width: 100%;
     height: 340px;
     border-radius: 10px;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     display: flex;
-    margin: 1rem;
+    margin: 0;
     position: relative;
     overflow: hidden;
     transition: all 0.3s ease-in-out;
@@ -38,22 +38,25 @@
   .cardWrapper:hover .cardImage {
     transform: scale(1.1);
   }
-  .cardWrapper h2 { 
+
+  @media (max-width: 768px) {
+    .cardWrapper {
+      width: 100%;
+    }
+  }
+  
+   h2 { 
     width: 300px;    
     height: 52px;
-    top: 268px;
-    left: 20px;
+    z-index: 2;
     font-weight: 500;
     font-size: 18px;
     line-height: 25.67px;
     color: #FFFFFF;
-    position: absolute;
-    z-index: 2;
-  }
-  
-  @media (max-width: 768px) {
-    .cardWrapper {
-      width: 90%;
-    }
+    position: absolute;    
+    bottom: 20px;
+    margin: 0;
+    text-align: left;
+   
   }
   
