--- a/src/components/Banner/_index.scss
+++ b/src/components/Banner/_index.scss
@@ -1,29 +1,27 @@
-.banner { 
-
-width: 90%;
-height: 223px;
-margin: 20px auto;
-border-radius: 1rem;
-overflow: hidden;
-display: flex;
-align-items: center;
-justify-content: center;
-position: relative;
-
-
-
+.banner {
+    width: 100%;
+    height: 20vw;
+    margin: 20px;
+    border-radius: 1rem;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
+
 .bannerImage {
-filter: brightness(0.5);
-width: 100%;
-height: 100%;
-object-fit: cover;
+    filter: brightness(0.5);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-h1 {
-width: 100%;
-text-align: center;
-position: absolute;
-color: #FFFFFF;
-font-size: 48px;
-font-weight: 500;
+
+h2 {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    color: #FFFFFF;
+    font-size: 3vw;
+    font-weight: 500;
 }
