--- a/src/components/CardsDisplay/_index.scss
+++ b/src/components/CardsDisplay/_index.scss
@@ -1,20 +1,22 @@
 .cardWrapper {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  
+  @media screen and (max-width: 768px) {
     width: 100%;
-    height: 340px;
-    border-radius: 10px;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    display: flex;
     margin: 0;
-    position: relative;
-    overflow: hidden;
-    transition: all 0.3s ease-in-out;
-    align-items: center;
-    justify-content: center;
-  
-
+    height: 250px;
   }
-  
-  .cardWrapper::before {
+
+  &::before {
     content: "";
     position: absolute;
     top: 0;
@@ -23,40 +25,37 @@
     height: 100%;
     background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     z-index: 1;
-    
   }
 
-  .cardImage {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    object-fit: cover;
-    position: absolute;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .cardWrapper:hover .cardImage {
+  &:hover .cardImage {
     transform: scale(1.1);
   }
 
-  @media (max-width: 768px) {
-    .cardWrapper {
-      width: 100%;
-    }
+  .cardImage {
+    object-fit: cover;
+    transition: all 0.3s ease-in-out;
+    width: 100%;
+    height: 100%;
   }
-  
-   h2 { 
-    width: 300px;    
+
+  h2 { 
+    width: 90%;    
     height: 52px;
     z-index: 2;
+    font-size: 1.2vw;
     font-weight: 500;
-    font-size: 18px;
-    line-height: 25.67px;
+    line-height: 1.2;
+    padding: 5px;
     color: #FFFFFF;
     position: absolute;    
-    bottom: 20px;
-    margin: 0;
+    bottom: 5px;
     text-align: left;
-   
+    margin: 0;
+    @media screen and (max-width: 768px) {
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
-  
+}
+
+
