--- a/src/components/Dropdown/_index.scss
+++ b/src/components/Dropdown/_index.scss
@@ -1,53 +1,60 @@
-
-.dropdownDiv { 
-  position: relative;
+.dropdownDiv {
   display: flex;
   flex-direction: column;
   color: #444;
   width: 100%;
-
-  margin: 20px;
+  margin: 20px 0;
   height: auto;
+
   @media (max-width: 768px) {
-    margin: 20px;
+    margin: 20px 0;
     height: auto;
-    };
+  }
 }
+
 .dropdown-header {
   cursor: pointer;
   width: 100%;
   position: sticky;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      color: white;
-      height: 52px;
-      background-color: #ff6060;
-      border-radius: 10px;
-      z-index: 1;
-      padding: 0;
-      margin: 0;
-      cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  height: 52px;
+  background-color: #ff6060;
+  border-radius: 10px;
+  z-index: 1;
+  padding: 0;
+  margin: 0;
 }
+
 h3 {
-  padding: 0 10px;     
+  padding: 0 10px;
 }
 
 .dropdown-description {
-
   position: relative;
   width: 100%;
+  height: 30vw;
   color: #FF6060;
-  font-size : 18px;
+  font-size: 1.5vw;
+  top: -5px;
   margin: 0;
   padding: 0;
   background-color: #F7F7F7;
   overflow: hidden;
-  height: auto;
-border-radius: 5px;
-transition: all  linear 0.4s;
+  border-radius: 5px;
+  transition: all linear 0.4s;
 
+  ul {
+    display: flex;
+    flex-direction: column;
 
+    li {
+      font-size: 1.5vw;
+      line-height: 1;
+    }
+  }
 }
 
 .open {
@@ -55,16 +62,16 @@ transition: all  linear 0.4s;
   height: 20px;
   margin: 0 10px;
 }
+
 .close {
   width: 20px;
   height: 20px;
   margin: 0 10px;
-  
 }
+
 .description-text {
   padding: 10px;
   margin: 10px;
   text-align: justify;
   line-height: 30px;
 }
-
