--- a/src/pages/Home/_index.scss
+++ b/src/pages/Home/_index.scss
@@ -1,30 +1,43 @@
 .container {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.cardsContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+  background-color: #f7f7f7;
+  border-radius: 20px;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    padding: 0;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    width: 100%;  
-  } 
-  
-  .cardsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 100%;
-  
+    background-color: transparent;
   }
- .cards {
-    width: 30%;
- }
+}
 
- a {
-    width: 30%;
-    margin: 10px;
-    @media screen and (max-width: 768px) {
-        width: 100%;
-    }
-        
-    }
- 
- 
-  
+.cardUnit {
+  margin: 1%;
+  width: 30%;
+  height: 20vw;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    min-width: 100%;
+    height: 250px;
+    margin: 10px 0;
+  }
+}
+
+a {
+  width: 100%;
+  height: 100%;
+}
