--- a/src/components/Banner/_index.scss
+++ b/src/components/Banner/_index.scss
@@ -1,3 +1,5 @@
+@import '../../utils/GlobalStyle/variables.scss';
+
 .banner {
     width: 100%;
     height: 20vw;
@@ -8,6 +10,15 @@
     align-items: center;
     justify-content: center;
     position: relative;
+
+    h2 {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        color: $colorSecondary;
+        font-size: 3vw;
+        font-weight: 500;
+    }
 }
 
 .bannerImage {
@@ -15,13 +26,4 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-h2 {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    color: #FFFFFF;
-    font-size: 3vw;
-    font-weight: 500;
 }
