--- a/src/components/Dropdown/_index.scss
+++ b/src/components/Dropdown/_index.scss
@@ -1,3 +1,5 @@
+@import '../../utils/GlobalStyle/variables.scss';
+
 .dropdownDiv {
   display: flex;
   flex-direction: column;
@@ -14,45 +16,67 @@
 
 .dropdown-header {
   cursor: pointer;
+  font-size: 18px;
+  font-weight: 500;
   width: 100%;
-  position: sticky;
+  height: 52px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   color: white;
   height: 52px;
-  background-color: #ff6060;
+  background-color: $colorPrimary;
   border-radius: 10px;
-  z-index: 1;
-  padding: 0;
-  margin: 0;
-}
+  z-index: 2;
+  @media screen and (max-width: 768px) {
+    font-size: 13px;
+  }
+  
+  
 
-h3 {
+  h3 {
   padding: 0 10px;
 }
+}
+
+
 
 .dropdown-description {
   position: relative;
   width: 100%;
-  height: 30vw;
-  color: #FF6060;
-  font-size: 1.5vw;
-  top: -5px;
+  height: 300px;
+  color: $colorPrimary;
+  font-size: 18px;
+  font-weight: 500;
+  top: -10px;
   margin: 0;
   padding: 0;
-  background-color: #F7F7F7;
+  background-color: $colorQuinary;
   overflow: hidden;
   border-radius: 5px;
   transition: all linear 0.4s;
+  line-height: 25.67px;
+  @media screen and (max-width: 768px) {
+    height: auto;
+  }
+   
+  
 
   ul {
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-direction: column;
 
     li {
-      font-size: 1.5vw;
-      line-height: 1;
+      font-size: 18px;
+      list-style: none;
+      @media screen and (max-width: 768px) {
+        font-size: 12px;
+      }
+        
+      
+      
     }
   }
 }
@@ -73,5 +97,4 @@ h3 {
   padding: 10px;
   margin: 10px;
   text-align: justify;
-  line-height: 30px;
 }
