--- a/src/components/Footer/_index.scss
+++ b/src/components/Footer/_index.scss
@@ -1,3 +1,5 @@
+@import '../../utils/GlobalStyle/variables.scss';
+
 .footerDiv {
   width: 100%;
   background-color: black;
@@ -5,16 +7,22 @@
   padding: 50px;
   margin-top: 50px;
   text-align: center;
-}
 
-img {
-  width: 122px;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 10px;
-}
+  p {
+    color: #fff;
+    font-size: 24px;
+    @media screen and (max-width: 768px) {
+      font-size: 12px;
+    }
+      
+    
+  }
 
-p {
-  color: #fff;
-  Font-size: 24px;
+  img {
+    width: 122px;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px;
+   
+  }
 }
