--- a/src/components/Header/_index.scss
+++ b/src/components/Header/_index.scss
@@ -1,3 +1,5 @@
+@import '../../utils/GlobalStyle/variables.scss';
+
 * {
   transition: all 0.3s ease-in-out;
 }
@@ -8,15 +10,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
+padding: 20px 100px;
+  @media screen and (max-width: 768px) {
+      padding: 20px;
+  }
 
 nav {
   float: right;
 }
 
+
 .logo img {
   float: left;
-  width: 14vw;
+  max-width: 14vw;
 
   &:hover {
     cursor: pointer;
@@ -27,15 +33,19 @@ nav {
 li {
   display: inline-block;
   padding: 10px;
-  font-size: 2.5vw;
+  font-size: 24px;
   text-decoration: none;
+  @media screen and (max-width: 768px) {
+    font-size: 12px;
+  }
 }
 
 li a {
   text-decoration: none;
-  color: #FF6060;
+  color: $colorPrimary;
 }
 
 li a:hover {
   text-decoration: underline;
+}
 }
