--- a/src/pages/Card/_index.scss
+++ b/src/pages/Card/_index.scss
@@ -1,40 +1,33 @@
+@import '../../utils/GlobalStyle/variables.scss';
+
+
 .card {
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
-  background-color: #ffffff;
-}
+  background-color: $colorSecondary;
+  color: $colorPrimary;
+
 
 .cardCarrousel {
   width: 100%;
   height: 30vw;
+  margin-bottom: 30px;
 }
 
-.hostRate {
-  width: 50%;
-  height: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 
-  @media screen and (max-width: 768px) {
-    flex-direction: row-reverse;
-    width: 100%;
-    height: auto;
-  }
-}
 
 .info {
   width: 50%;
-  height: 150px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 16px;
+  align-items: stretch;
 
   @media screen and (max-width: 768px) {
     width: 100%;
@@ -43,53 +36,82 @@
 
 .cardTitle {
   width: 100%;
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 8px;
+  font-size: 36px;
+  font-weight: 500;
+  @media screen and (max-width: 768px) {
+  width: 100%;
+  font-size: 18px;
+  line-height: 25.67px; 
+  }
 }
 
 .cardLocation {
   width: 100%;
-  font-size: 16px;
-  margin-bottom: 16px;
+  font-size: 18px;
+  line-height: 25.67px;
+  font-weight: 500;
 }
 
 .cardTags {
   width: 100%;
-  margin-bottom: 16px;
+
 
   @media screen and (max-width: 768px) {
     width: 100%;
   }
 }
+.hostRate {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
 
+  @media screen and (max-width: 768px) {
+    flex-direction: row-reverse;
+    width: 100%;
+    height: auto;
+  }
+}
 .cardHost {
   width: 100%;
   display: flex;
   align-items: center;
-  margin-bottom: 16px;
   justify-content: end;
 
   @media screen and (max-width: 768px) {
     align-self: start;
   }
+
+  img {
+    width: 64px;
+    height: 64px;
+    border-radius: 100%;
+    margin-right: 8px;
+    @media screen and (max-width: 768px) {
+      width: 32px;
+      height: 32px;
+    
+      
+    }
+  }
+
+  p {
+    font-size: 18px;
+    width: 93px;
+    text-align: right;
+    margin: 10px;
+  }
 }
 
-.cardHost img {
-  width: 48px;
-  height: 48px;
-  border-radius: 100%;
-  margin-right: 8px;
-}
 
-.cardHost p {
-  font-size: 16px;
-}
+
+
 
 .cardRating {
   display: flex;
   width: 100%;
-  margin-bottom: 16px;
   justify-content: end;
   align-self: center;
 
@@ -107,4 +129,5 @@
     width: 100%;
     height: auto;
   }
+}
 }
