--- a/src/pages/Home/_index.scss
+++ b/src/pages/Home/_index.scss
@@ -1,3 +1,5 @@
+@import '../../utils/GlobalStyle/variables.scss';
+
 .container {
   display: flex;
   flex-direction: column;
@@ -12,7 +14,7 @@
   flex-wrap: wrap;
   justify-content: center;
   padding: 20px;
-  background-color: #f7f7f7;
+  background-color: $colorTertiary;
   border-radius: 20px;
 
   @media screen and (max-width: 768px) {
@@ -22,7 +24,7 @@
     align-items: center;
     background-color: transparent;
   }
-}
+
 
 .cardUnit {
   margin: 1%;
@@ -40,4 +42,5 @@
 a {
   width: 100%;
   height: 100%;
+}
 }
