--- a/src/components/Banner/_index.scss
+++ b/src/components/Banner/_index.scss
@@ -2,7 +2,7 @@
 
 .banner {
     width: 100%;
-    height: 20vw;
+    height: 223px;
     margin: 20px;
     border-radius: 1rem;
     overflow: hidden;
@@ -22,7 +22,7 @@
 }
 
 .bannerImage {
-    filter: brightness(0.5);
+    filter: brightness(0.7);
     width: 100%;
     height: 100%;
     object-fit: cover;
