--- a/src/components/Carrousel/_index.scss
+++ b/src/components/Carrousel/_index.scss
@@ -12,6 +12,12 @@
   overflow: hidden;
   position: relative;
  
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+  }
 }
   .logementImage {
     width: 100%;
