--- a/src/components/Dropdown/_index.scss
+++ b/src/components/Dropdown/_index.scss
@@ -7,6 +7,7 @@
   width: 100%;
   margin: 20px 0;
   height: auto;
+  padding: 0;
 
   @media (max-width: 768px) {
     margin: 20px 0;
@@ -44,7 +45,7 @@
 .dropdown-description {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: auto;
   color: $colorPrimary;
   font-size: 18px;
   font-weight: 500;
