--- a/src/components/Tags/_index.scss
+++ b/src/components/Tags/_index.scss
@@ -7,7 +7,7 @@
 
     ul {
         display: flex;
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         padding: 0;
         list-style: none;
         margin: 0;
@@ -16,19 +16,19 @@
     li {
         display: flex;
         align-items: start;
-        margin: 0 0.5rem 0 0;
+        margin: 0.5rem 0.5rem 0 0;
         background-color: $colorPrimary;
         color: $colorSecondary;
         border-radius: 10px;
         font-size: 14px;
         font-weight: 500;
-        line-height: 19.96px;
+        
         width: 115px;
         height: 25px;
         overflow: hidden;
         text-align: center;
         justify-content: center;
-        padding: 0;
+        padding: 5px;
         @media screen and (max-width: 768px) {
             width: 100px;
             height: 20px;
