--- a/src/pages/About/_index.scss
+++ b/src/pages/About/_index.scss
@@ -1,3 +1,13 @@
-.dropdown-description {
+ .dropdown-description {
     height: auto;
+    
 }
+
+.dropdownWrapper {
+    width: 100%;
+    padding: 0 30px;
+    @media screen and (max-width: 768px) {
+        padding: 0px
+    }
+
+    }
