--- a/src/pages/Card/_index.scss
+++ b/src/pages/Card/_index.scss
@@ -15,7 +15,7 @@
 
 .cardCarrousel {
   width: 100%;
-  height: 30vw;
+  height: 223px;
   margin-bottom: 30px;
 }
 
@@ -41,7 +41,6 @@
   @media screen and (max-width: 768px) {
   width: 100%;
   font-size: 18px;
-  line-height: 25.67px; 
   }
 }
 
@@ -123,7 +122,12 @@
 .cardDropdown {
   align-self: start;
   width: 48%;
+  padding: 0;
   height: auto;
+  .dropdown-description {
+
+    height: 300px;
+  }
 
   @media screen and (max-width: 768px) {
     width: 100%;
