--- a/src/components/Tags/_index.scss
+++ b/src/components/Tags/_index.scss
@@ -23,7 +23,7 @@
         font-size: 14px;
         font-weight: 500;
         
-        width: 115px;
+        min-width: 115px;
         height: 25px;
         overflow: hidden;
         text-align: center;
