--- a/src/components/CardsDisplay/_index.scss
+++ b/src/components/CardsDisplay/_index.scss
@@ -42,13 +42,12 @@
   h2 { 
     width: 60%;    
     z-index: 2;
-    font-size: 18px;
+    font-size: 1.2vw;
     font-weight: 500;
-    line-height: 1.2;
-    padding: 0 0px 0 20px;
+    top: 70%;    
+    padding: 0 0 0 20px;
     color: $colorSecondary;
     position: absolute;    
-    bottom: 40px;
     text-align: left;
     margin: 0;
     @media screen and (max-width: 768px) {
