--- a/src/components/Banner/_index.scss
+++ b/src/components/Banner/_index.scss
@@ -4,12 +4,17 @@
     width: 100%;
     height: 223px;
     margin: 20px;
-    border-radius: 1rem;
+    border-radius: 10px;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    @media screen and (max-width: 768px) {
+        height: 111px;
+    }
+       
+    
 
     h2 {
         width: 100%;
