--- a/src/components/Banner/_index.scss
+++ b/src/components/Banner/_index.scss
@@ -12,6 +12,8 @@
     position: relative;
     @media screen and (max-width: 768px) {
         height: 111px;
+        justify-content: start;
+
     }
        
     
@@ -20,10 +22,17 @@
         width: 100%;
         text-align: center;
         position: absolute;
+        font-size: 48px;
         color: $colorSecondary;
-        font-size: 3vw;
         font-weight: 500;
-    }
+        @media screen and (max-width: 768px) {
+            width: 217px;
+            font-size: 24px;
+            text-align: left;
+            margin: 16px;
+        }
+            
+        }
 }
 
 .bannerImage {
