--- a/src/pages/Card/_index.scss
+++ b/src/pages/Card/_index.scss
@@ -15,8 +15,11 @@
 
 .cardCarrousel {
   width: 100%;
-  height: 223px;
+  height: 415px;
   margin-bottom: 30px;
+  @media screen and (max-width: 768px) {
+    height: 255px;
+  }
 }
 
 
