--- a/src/pages/Card/_index.scss
+++ b/src/pages/Card/_index.scss
@@ -129,7 +129,11 @@
   height: auto;
   .dropdown-description {
 
-    height: 300px;
+    height: 200px;
+    @media screen and (max-width: 768px) {
+      height: auto;
+      
+    }
   }
 
   @media screen and (max-width: 768px) {
